# SW_Engineer_Agent

./: README.md  pyproject.toml
output/: ARCHITECTURE_REVIEW.md  REQUIREMENTS.md
src/software_engineer/: crew.py  main.py
src/software_engineer/config/: agents.yaml  tasks.yaml
