[project]
name = "software_engineer"
version = "0.2.0"
description = "Advanced Software Engineering Crew using CrewAI for Java/JavaFX project generation"
authors = [
    { name = "Software Engineering Team", email = "team@example.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
software_engineer = "software_engineer.main:run"
run_crew = "software_engineer.main:run"
train_crew = "software_engineer.main:train"
replay_crew = "software_engineer.main:replay"
test_crew = "software_engineer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
version = "0.2.0"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true